New endpoint for consumption
